# ctils

./: CMakeLists.txt  README.md
include/ctils/: ctils.h  string.h
src/: string.c
tests/: CMakeLists.txt  cmp.test.c  concat.test.c  echo.test.c
